[package]
name = "cli_mate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.0", features = ["dynamic"] }
rand = "0.8.5"
noise = "0.8.2"
bevy-debug-text-overlay = "4.0.1"
bevy-inspector-egui = "0.14"
bevy_mod_raycast = "0.7.0"
iyes_loopless = "0.9.1"
serde = "1.0.147"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3